rsbc_df_vips_adapter/network_gateway/openshift/networking_deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: vips-api-service
spec:
  type: ExternalName
  externalName: vips-api-deployment-dev-1-test.c220ad-dev.svc.cluster.local
---

apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: ride-vips-adapter-rev-proxy
  name: ride-vips-adapter-rev-proxy
spec:
  containers:
  - image: image-registry.openshift-image-registry.svc:5000/be5301-dev/nginx-rev-proxy-image:1
    name: ride-vips-adapter-rev-proxy
    resources: {}
    volumeMounts:
    - name: nginxvol
      mountPath: "/tmp"
    ports:
    - containerPort: 80
    - containerPort: 8080
    - containerPort: 8082
    - containerPort: 5000
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: nginxvol
    configMap:
      name: nginxconfigfile
status: {}

---

kind: Service
apiVersion: v1
metadata:
  name: nginx-proxy-cluster-ip
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
      name: tcp1
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ride-vips-adapter-rev-proxy

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ride-vips-adapter
spec:
  to:
    kind: Service
    name: nginx-proxy-cluster-ip
    weight: 100
  port:
    targetPort: 8083
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
